[gd_scene load_steps=19 format=2]

[ext_resource path="res://images/icons/granjero.png" type="Texture" id=1]
[ext_resource path="res://images/icons/salir.png" type="Texture" id=2]
[ext_resource path="res://images/bg/IMG-20221027-WA0293.jpg" type="Texture" id=3]
[ext_resource path="res://images/icons/settings (1).png" type="Texture" id=4]
[ext_resource path="res://fonts/Stabillo Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/ui/Level_Selector.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/scripts/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://images/icons/oveja lateral.png" type="Texture" id=8]
[ext_resource path="res://music/bg/Naruto - Afternoon of Konoha(MP3_128K).mp3" type="AudioStream" id=10]
[ext_resource path="res://scenes/scripts/CheckBox.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
level_selector = ExtResource( 6 )

[node name="50F8342B04A7Cca6963C225310Da0305" type="Sprite" parent="."]
position = Vector2( 400.5, 312.875 )
scale = Vector2( 1.42376, 1.13785 )
texture = ExtResource( 3 )

[node name="Farmer" type="Sprite" parent="50F8342B04A7Cca6963C225310Da0305"]
position = Vector2( 226.191, 80.9448 )
scale = Vector2( 0.379752, 0.604569 )
z_index = 1
texture = ExtResource( 1 )

[node name="Sheep1" type="Sprite" parent="50F8342B04A7Cca6963C225310Da0305"]
position = Vector2( -124.67, 60.7502 )
scale = Vector2( 0.134658, 0.183661 )
texture = ExtResource( 8 )

[node name="Sheep2" type="Sprite" parent="50F8342B04A7Cca6963C225310Da0305"]
position = Vector2( -210.525, -18.8085 )
rotation = 0.335633
scale = Vector2( 0.138168, 0.181035 )
texture = ExtResource( 8 )

[node name="Sheep3" type="Sprite" parent="50F8342B04A7Cca6963C225310Da0305"]
position = Vector2( -237.049, 82.7214 )
scale = Vector2( 0.134658, 0.183661 )
texture = ExtResource( 8 )

[node name="Sheep4" type="Sprite" parent="50F8342B04A7Cca6963C225310Da0305"]
position = Vector2( 84.6351, 63.3867 )
scale = Vector2( 0.134658, 0.183661 )
texture = ExtResource( 8 )

[node name="Load" type="Button" parent="."]
margin_left = 308.0
margin_top = 361.0
margin_right = 445.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 40, -21 )
custom_fonts/font = SubResource( 2 )
text = "Jugar"
flat = true

[node name="Exit" type="Button" parent="."]
margin_left = 308.0
margin_top = 444.0
margin_right = 445.0
margin_bottom = 503.0
rect_pivot_offset = Vector2( 40, -21 )
custom_fonts/font = SubResource( 2 )
text = "Salir"
flat = true

[node name="Options" type="Button" parent="."]
margin_left = 193.0
margin_top = 499.0
margin_right = 318.0
margin_bottom = 595.0
rect_pivot_offset = Vector2( 40, -21 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 291.0
margin_top = 179.0
margin_right = 477.0
margin_bottom = 300.0
rect_min_size = Vector2( 150, 52.5 )
theme = SubResource( 5 )
window_title = ""
dialog_text = "¿Seguro que quieres salir?"

[node name="Images(1)" type="Sprite" parent="ConfirmationDialog"]
position = Vector2( 93, 55 )
scale = Vector2( 0.0492535, 0.0498193 )
texture = ExtResource( 2 )

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_left = 252.0
margin_top = 258.0
margin_right = 505.0
margin_bottom = 354.0
custom_fonts/title_font = SubResource( 6 )
window_title = "Opciones"

[node name="OptionButton" type="OptionButton" parent="WindowDialog"]
margin_left = 147.0
margin_top = 30.0
margin_right = 246.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 7 )
text = "800x600"
items = [ "800x600", null, false, 0, null, "1024x768", null, false, 1, null, "1280x720", null, false, 2, null ]
selected = 0

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 59.0
margin_top = 32.0
margin_right = 137.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 8 )
text = "Resolucion: "
align = 2

[node name="Label2" type="Label" parent="WindowDialog"]
margin_left = 42.0
margin_top = 59.0
margin_right = 135.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 9 )
text = "Quitar Musica:"
align = 2

[node name="CheckBox" type="CheckBox" parent="WindowDialog"]
margin_left = 144.0
margin_top = 55.0
margin_right = 168.0
margin_bottom = 79.0
script = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Label" type="Label" parent="."]
margin_left = 122.0
margin_top = 95.0
margin_right = 702.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 3 )
text = "¿Dónde están mis ovejas?"
align = 1
valign = 1

[node name="Sheep5" type="Sprite" parent="Label"]
position = Vector2( 358.965, -13.2931 )
scale = Vector2( 0.0682447, 0.0664543 )
texture = ExtResource( 8 )

[node name="Sheep6" type="Sprite" parent="Label"]
position = Vector2( 60.5405, -8.86477 )
rotation = -0.261799
scale = Vector2( 0.0672161, 0.0723289 )
texture = ExtResource( 8 )

[node name="Sheep7" type="Sprite" parent="Label"]
position = Vector2( 251.838, -11.1621 )
rotation = -0.261799
scale = Vector2( 0.070198, 0.0706434 )
texture = ExtResource( 8 )

[node name="Sheep8" type="Sprite" parent="Label"]
position = Vector2( 463.465, -12.0431 )
scale = Vector2( 0.0643128, 0.0708948 )
texture = ExtResource( 8 )

[connection signal="pressed" from="Load" to="." method="_load_pressed"]
[connection signal="pressed" from="Exit" to="." method="exit_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="item_selected" from="WindowDialog/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="WindowDialog/CheckBox" to="." method="_on_CheckBox_pressed"]
